src/widgets/itemviews/qtableview_p.h
@@ -136,7 +136,6 @@ class QTableViewPrivate : public QAbstractItemViewPrivate
 public:
     QTableViewPrivate()
         : showGrid(true), gridStyle(Qt::SolidLine),
-          rowSectionAnchor(-1), columnSectionAnchor(-1),
           columnResizeTimerID(0), rowResizeTimerID(0),
           horizontalHeader(nullptr), verticalHeader(nullptr),
           sortingEnabled(false), geometryRecursionBlock(false),
@@ -186,8 +185,6 @@ public:
 
     bool showGrid;
     Qt::PenStyle gridStyle;
-    int rowSectionAnchor;
-    int columnSectionAnchor;
     int columnResizeTimerID;
     int rowResizeTimerID;
     QList<int> columnsToUpdate;
